@@ -16,7 +16,8 @@
 #' @param port
 #' The port (number) that will be used for communication between 
 #' the client and server.  The port value for the client and server
-#' must agree.
+#' must agree.  If the value is 0, then a random open port will be
+#' selected.
 #' @param password
 #' A password the client must enter before the user can process
 #' commands on the server.  If the value is \code{NULL}, then no
@@ -62,6 +63,9 @@ server <- function(port=55555, password=NULL, maxretry=5, secure=has.sodium(), l
   
   reset_state()
   
+  if (port == 0)
+    port <- pbdZMQ::random_open_port()
+  
   set(whoami, "remote")
   set(logfile, logfile_init())
   set(serverlog, log)
@@ -76,14 +80,14 @@ server <- function(port=55555, password=NULL, maxretry=5, secure=has.sodium(), l
   if (userpng)
     options(device = remoter::rpng)
   
-  rm("port", "password", "maxretry", "showmsg", "secure", "log", "verbose", "userpng")
-  invisible(gc())
-  
   eval(parse(text = "suppressMessages(library(remoter, quietly = TRUE))"), envir = globalenv()) 
   
   options(warn = 1)
   
-  logprint(paste("*** Launching", ifelse(getval(secure), "secure", "UNSECURE"), "server ***"), preprint="\n")
+  logprint(paste("*** Launching", ifelse(getval(secure), "secure", "UNSECURE"), "server ***\n    Port: ", port), preprint="\n")
+  
+  rm("port", "password", "maxretry", "showmsg", "secure", "log", "verbose", "userpng")
+  invisible(gc())
   
   remoter_repl_server()
   remoter_exit_server()
