@@ -60,14 +60,14 @@ scrub_addr <- function(addr)
 
 validate_port <- function(port, warn=FALSE)
 {
-  assert_that(is.count(port))
-  assert_that(port > 1023)
+  assert_that(is.count(port) || isTRUE(all.equal(port, 0)))
+  assert_that(port == 0 || port > 1023)
   assert_that(port < 65536)
   
-  if (port < 49152 && warn)
+  if (port != 0 && port < 49152 && warn)
     cat("WARNING: You are strongly encouraged to use port values between 49152 and 65536. See '?pbdZMQ::random_port' for details.")
   
-  TRUE
+  invisible(TRUE)
 }
 
 
